--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==1.0.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+psycopg2==2.8.1
 pycparser==2.19
 six==1.12.0
 Werkzeug==0.15.2
